--- a/build.gradle
+++ b/build.gradle
@@ -2,27 +2,27 @@ plugins {
 	id 'org.springframework.boot' version '2.6.4'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
-	id 'eclipse'
-	id 'idea'
 }
-group 'com.example'
-version='0.1.0'
+
+group = 'com'
+version = '0.0.1-SNAPSHOT'
+sourceCompatibility = '11'
+
 repositories {
 	mavenCentral()
 }
-sourceCompatibility = '11'
+
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	def springBootVersion='2.6.4'
-	implementation(group:"org.springframework.boot", name:"spring-boot-starter-thymeleaf", version:springBootVersion)
-	implementation(group:"org.springframework.boot", name:"spring-boot-starter-web", version:springBootVersion)
-	implementation(group:"org.springframework.boot", name:"spring-boot-starter-validation", version:springBootVersion)
-	//implementation(group:"org.springframework.boot", name:"spring-boot-starter-data-jpa", version:springBootVersion)
-	//implementation(group:"com.h2database", name:"h2", version:"1.4.200")
-	testImplementation('org.springframework.boot:spring-boot-starter-test') {
-		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-	}
+	def springBootVersion='2.2.2.RELEASE'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.session:spring-session-core'
+	implementation(group:"org.springframework.boot", name:"spring-boot-starter-data-jpa", version:springBootVersion)
+	implementation(group:"com.h2database", name:"h2", version:"1.4.200")
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
 }
-test {
+
+tasks.named('test') {
 	useJUnitPlatform()
 }
