🐯 Delete mail & address

--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,11 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<image>
+						<network>host</network>
+					</image>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
